;;
;; FUN package
;;
[metadata]
name = glowbl-xblock
version = 0.2.0
description = An Xblock to integrate Glowbl in Open edX
long_description = file: README.md
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/xblock-Glowbl
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    fun_glowbl = fun_glowbl:FUNGlowblXBlock

[options.extras_require]
dev =
    wheel

[options.package_data]
fun_glowbl =
    public/img/*
    static/css/*.css
    static/html/*.html
    static/js/src/*.js
    translations/*

[wheel]
universal = 1
